sfdx-source/force-app/main/default/objects/Campaign_Program__c/Campaign_Program__c.object-meta.xml
<CustomObject>
    <description>LEM-3677: It is used to track and deactivate a campaign in order to attribute Ads and Promo deals to internal DoorDash programs.</description>
    <label>Campaign Program</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>