sfdx-source/force-app/main/default/objects/Campaign_Program__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LEM-3677: It is used to store the detailed information of campaign program.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>