sfdx-source/force-app/main/default/objects/Campaign_Program__c/validationRules/ValidateUniqueCampaignProgramName.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateUniqueCampaignProgramName</fullName>
    <active>true</active>
    <description>LEM-3677: It validates whether the campaign program name is unique across the org.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Campaign_Program_Validation_Rules),
  OR(
    ISNEW(),
    ISCHANGED(Name)
  ),
  NOT(
    ISBLANK(
      VLOOKUP($ObjectType.Campaign_Program__c.Fields.Name, $ObjectType.Campaign_Program__c.Fields.Name, Name)
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>A campaign program already exists with this Name. Please edit the existing record or choose a different Name.</errorMessage>
</ValidationRule>